# posnet-position_based_attention

./: README.md  pyproject.toml
data/: .gitignore
data/0_tools/: create_dictionary.py
data/iwslt14/de-en/: prepare.bash
data/wmt14/en-de/: prepare.bash
data/wmt14/en-fr/: prepare.bash
models/baselines/configs/: reltransformer.iwslt.de-en.yaml  reltransformer.wmt.en-de.yaml  reltransformerBase.wmt.en-de.yaml  reltransformerBase.wmt.en-fr.yaml  reltransformerBase.wmt.en-zh.yaml  transformer.iwslt.de-en.yaml  transformer.wmt.en-de.yaml  transformerBase.wmt.en-de.yaml  transformerBase.wmt.en-fr.yaml  transformerBase.wmt.en-zh.yaml
models/baselines/models/: reltransformer.py  transformer.py
models/posnet/configs/: fnet.iwslt.de-en.yaml  fnet.wmt.en-de.yaml  fnetBase.wmt.en-de.yaml  fnetBase.wmt.en-fr.yaml  fnetBase.wmt.en-zh.yaml  gaussianattn.iwslt.de-en.yaml  gaussianattn.wmt.en-de.yaml  gaussianattnBase.wmt.en-de.yaml  gaussianattnBase.wmt.en-fr.yaml  gaussianattnBase.wmt.en-zh.yaml  lightconv.iwslt.de-en.yaml  lightconv.wmt.en-de.yaml  lightconvBase.wmt.en-de.yaml  lightconvBase.wmt.en-fr.yaml  lightconvBase.wmt.en-zh.yaml  linearattn.iwslt.de-en.yaml  linearattn.wmt.en-de.yaml  linearattnBase.wmt.en-de.yaml  linearattnBase.wmt.en-fr.yaml  linearattnBase.wmt.en-zh.yaml  posnet.iwslt.de-en.yaml  posnet.wmt.en-de.yaml  posnetBase.wmt.en-de.yaml  posnetBase.wmt.en-fr.yaml  posnetBase.wmt.en-zh.yaml
models/posnet/models/: __init__.py  fnet.py  gaussianattn.py  lightconv.py  (+2 more)
pytorchmt/pytorchmt/: search.py  train.py
scripts/: eval.bash  search.bash  train.bash
(+17 files in other folders)
