[tool.poetry]
name = "pytorchmt"
version = "0.1.0"
description = ""
authors = ["Felix Schmidt <fschmidt@apptek.com>"]

[tool.poetry.dependencies]
torch = "1.10.0"
python = "~3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"